<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tic-tac-toe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit">EXIT</string>
     <string name="play1">Player 1:</string>
      <string name="play2">Player 2:</string>
    <string name="nwgame">NEW GAME</string>
    <string name="hint1">enter Name</string>
    <string name="hint2">enter Name</string>
    <string name="submit">PLAY</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">Register</string>

</resources>
