<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" 
    android:background="@drawable/tic">

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="148dp"
        android:text="@string/play1"
        android:textColor="#ff0000"
        android:textSize="23sp"
        android:textStyle="italic" 
         android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/player1"
        android:layout_centerVertical="true"
        android:text="@string/play2"
        android:textColor="#ff0000"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/pname1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/player1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/hint1">

    </EditText>

    <EditText
        android:id="@+id/pname2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/player2"
       
    android:layout_toRightOf="@+id/player1"
        android:ems="10"
      
        android:hint="@string/hint2"/>

    <Button
        android:id="@+id/subbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/submit" />
  
</RelativeLayout>
